--- a/test/Makefile
+++ b/test/Makefile
@@ -1,21 +1,20 @@
-EXEC := ../main
-EVALUATOR := evaluator
+EXEC_PATH := $(addprefix ../,$(EXEC))
+EVALUATOR := ./evaluator
 INPUTS := $(wildcard cases/*.txt)
 OUTPUTS := $(INPUTS:%.txt=%.out)
 
 all: test
 
 .PHONY: test
-test: $(CASES:cases/%.txt=test_%)
+test: $(INPUTS:cases/%.txt=test_%)
 
 .PHONY: test_%
 test_%: cases/%.txt cases/%.out
 	@echo "Testing $<"
 	@$(EVALUATOR) $^
-	@echo "OK"
 
-%.out: %.txt
-	./$(EXEC) $< $@
+%.out: %.txt $(EXEC_PATH)
+	./$(EXEC_PATH) $< $@
 
 .PHONY: clean
 clean:
